2005-10-01  Rodney Dawes  <dobey@novell.com>

	* preferences.c (bg_preferences_load, bg_preferences_merge_entry):
	Make sure that the UTF8 filename is valid and exists before trying
	to use it, otherwise fall back to using the filename encoding specified
	by the user with the environment variables used by glib to determine
	the locale encoding of filenames

	Fixes #168604

2005-06-10  Kjartan Maraas  <kmaraas@gnome.org>

	* applier.c: (render_wallpaper), (is_nautilus_running): GCC4
	build issues.

2005-05-08  Richard Hoelscher  <rah@rahga.com>

	* applier.c (refresh_render): Remove egg_pixbuf_new_from_file_at_size,
	using the gtk+-2.6 function for this instead.

	Fixes #169757

2005-02-10  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Don't define GNOME_ICONDIR as libbackground does not
	use it in any of the code

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-06-27  Rodney Dawes  <dobey@novell.com>

	* applier.c: Remove all references to #ifdef HAVE_GTK_MULTIHEAD
	Patch from Kjartan Maraas <kmaraas@gnome.org>

	Fixes #142749

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-03-12  Chris Lahey  <clahey@rigger.boston.ximian.com>

	* applier.c (refresh_render): Move the image reload into a separate function.
	(size_changed_cb): Handle screen resolution changes.

2004-03-11  Chris Lahey  <clahey@rigger.boston.ximian.com>

	* applier.c (bg_applier_apply_prefs): If the image is going to be
	scaled or stretched, load it at the size it's going to be
	displayed.
	(need_wallpaper_load_p): If the wallpaper type changed, unless it
	changed between TILED and CENTERED, we need to reload the image.

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2003-12-07  Jan Arne Petersen  <jpetersen@uni-bonn.de>
