@@ -1,3 +1,10 @@
+2005-11-07  Alexis Robert <alexis@linuxcode.eu.org>
+
+	Fixes #320647
+
+	* libbackground/preferences.c (bg_preferences_load): only use strings
+	returned from GConf when not NULL.
+
 2005-10-01  Rodney Dawes  <dobey@novell.com>
 
 	* preferences.c (bg_preferences_load, bg_preferences_merge_entry):
